@@ -6,6 +6,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	Michael Krieger
 	- vcdb, vpopmail: pass mode to open() when creating files.  Fixes
 	  bug where lock files were created with 0000 permissions.
+	- vpalias: set mydir to NULL after closing it.
 
 	Tom Collins
 	- vpalias: don't trash alias name passed to valias_insert().
